# pytest-minio-mock

./: .gitignore  .gitlint  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml  tox.ini
.github/workflows/: test-pipeline.yaml
pytest_minio_mock/: __init__.py  exceptions.py  plugin.py  utils.py
tests/: conftest.py  test_minio_mock.py
